# task-management

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  run.sh
app/: common.py  db.py  error_handler.py  exceptions.py  main.py  settings.py
app/v1/tasks/: crud.py  endpoint.py  schema.py  serializer.py
tests/: test_tasks.py
