[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["anandukch <anandukch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
pymongo = "^4.6.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.11.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
